--- a/install
+++ b/install
@@ -5,42 +5,37 @@ set -e
 SCRIPT_DIR=$PWD
 VIM_DEPENDENCY_DIR="$HOME/.vim/pack/$(whoami)/start/"
 
-if [ ! -d "$VIM_DEPENDENCY_DIR" ]; then
-  echo "Making directory '$VIM_DEPENDENCY_DIR' to clone dependencies"
-  mkdir --parents --verbose $VIM_DEPENDENCY_DIR
+echo "Vim dependencies will be cloned in '$VIM_DEPENDENCY_DIR'"
+mkdir --parents --verbose $VIM_DEPENDENCY_DIR
 
-  DEPS=(
-    airblade/vim-gitgutter.git
-    altercation/vim-colors-solarized.git
-    jiangmiao/auto-pairs.git
-    keith/rspec.vim.git
-    mileszs/ack.vim.git
-    mxw/vim-jsx.git
-    pangloss/vim-javascript.git
-    scrooloose/nerdtree.git
-    sstallion/vim-wildignore.git
-    tpope/vim-abolish.git
-    tpope/vim-commentary.git
-    tpope/vim-endwise.git
-    tpope/vim-fugitive.git
-    tpope/vim-rails.git
-    tpope/vim-surround.git
-    vim-ruby/vim-ruby.git
-    wincent/command-t.git
-    wincent/terminus.git
-  )
+DEPS=(
+  airblade/vim-gitgutter.git
+  altercation/vim-colors-solarized.git
+  jiangmiao/auto-pairs.git
+  keith/rspec.vim.git
+  mileszs/ack.vim.git
+  mxw/vim-jsx.git
+  pangloss/vim-javascript.git
+  scrooloose/nerdtree.git
+  sstallion/vim-wildignore.git
+  tpope/vim-abolish.git
+  tpope/vim-commentary.git
+  tpope/vim-endwise.git
+  tpope/vim-fugitive.git
+  tpope/vim-rails.git
+  tpope/vim-surround.git
+  vim-ruby/vim-ruby.git
+  wincent/command-t.git
+  wincent/terminus.git
+)
 
-  echo "Cloning dependencies in '$VIM_DEPENDENCY_DIR'"
-  cd $VIM_DEPENDENCY_DIR
+cd $VIM_DEPENDENCY_DIR
 
-  for DEP in ${DEPS[@]}; do
-    REPO="https://github.com/$DEP"
-    echo "Cloning from $REPO..."
-    git clone $REPO --verbose
-  done
-else
-  echo "'$VIM_DEPENDENCY_DIR' already exists. Skipping cloning dependencies."
-fi
+for DEP in ${DEPS[@]}; do
+  REPO="https://github.com/$DEP"
+  echo "Cloning from $REPO..."
+  git clone $REPO --verbose
+done
 
 echo "Creating symlinks for dotfiles..."
 cd $SCRIPT_DIR
