--- a/install
+++ b/install
@@ -6,7 +6,7 @@ SCRIPT_DIR=$PWD
 VIM_DEPENDENCY_DIR="$HOME/.vim/pack/$(whoami)/start/"
 
 echo "Vim dependencies will be cloned in '$VIM_DEPENDENCY_DIR'"
-mkdir --parents --verbose $VIM_DEPENDENCY_DIR
+mkdir -pv $VIM_DEPENDENCY_DIR
 cd $VIM_DEPENDENCY_DIR
 
 DEPS=(
